<resources>
    <string name="settings_title">Settings</string>
    <string name="account_title">Pixels account</string>
    <string name="console_endpoint">Console address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="password_change_required">Change this account password before starting a remote session.</string>
...
